package eapli.ecourse.coursemanagement.application;

import eapli.ecourse.coursemanagement.domain.ClassBuilder;
import eapli.ecourse.coursemanagement.domain.Course;
import eapli.ecourse.coursemanagement.domain.CourseBuilder;
import eapli.ecourse.coursemanagement.domain.SchClass;
import eapli.ecourse.coursemanagement.repositories.ClassRepository;
import eapli.ecourse.infrastructure.persistence.PersistenceContext;
import eapli.ecourse.usermanagement.domain.BaseRoles;
import eapli.framework.infrastructure.authz.application.AuthorizationService;
import eapli.framework.infrastructure.authz.application.AuthzRegistry;

import java.util.Calendar;

public class ScheduleClassController {
    private final AuthorizationService authz = AuthzRegistry.authorizationService();
    private final ClassRepository classRepository = PersistenceContext.repositories().classes();

    public SchClass scheduleClass(String className, int instructor, Calendar startTime, Calendar endTime) {
        authz.ensureAuthenticatedUserHasAnyOf(BaseRoles.POWER_USER, BaseRoles.ADMIN);

        final ClassBuilder classbuilder = new ClassBuilder();
        classbuilder.withCourse(className).withInstructor(instructor).withDates(startTime, endTime);

        SchClass classs = classbuilder.build();
        return this.classRepository.save(classs);
    }
}
